-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
None
-
Fully Compatible
-
ALL
-
Service Arch 2021-02-22
-
None
-
None
-
None
-
None
-
None
-
None
-
None
XCode12 can't build enterprise because it emits a warning about a number of classes in enterprise that have final destructors but are not themselves final classes.
src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.h:23:27: error: class with destructor marked 'final' cannot be inherited from [-Werror,-Wfinal-dtor-non-final-class]
~OpenLDAPConnection() final;
^
src/mongo/db/modules/enterprise/src/ldap/connections/openldap_connection.h:20:7: note: mark 'mongo::OpenLDAPConnection' as 'final' to silence this warning
class OpenLDAPConnection : public LDAPConnection {
^
1 error generated.