SERVER-54600 mark some classes final to silence xcode12 builds

GitOrigin-RevId: 4337496a0ea33dfceee8782406dd72048f4bb98a